--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 <h3>IT Analyst</h3>
 <p>Wipro Japan | Tokyo, Japan</p>
-<p><strong>Duration:</strong> 2024 - Present</p>
+<p><strong>Duration:</strong> 2024-03 - Present</p>
 <ul>
   <li><strong>Project:</strong> Olympus system engineer</li>
   <li><strong>Role:</strong> Acted as the bridge engineer between global infrastructure teams and Japanese clients.</li>
@@ -165,7 +165,7 @@
 </ul>
 <h3>Technical Support Engineer (Bridge Engineer)</h3>
 <p>HCL Tech | Chennai, India</p>
-<p><strong>Duration:</strong> 2023 - 2024</p>
+<p><strong>Duration:</strong> 2023-06 - 2024-02</p>
 <ul>
     <li><strong>Project:</strong> BD Medical Projects</li>
     <li>Translated technical documents and communications between Japanese and English for BD's medical project.</li>
@@ -175,7 +175,7 @@
 
 <h3>Field service Engineer</h3>
 <p>TCS Japan | Tokyo, Japan</p>
-<p><strong>Duration:</strong> 2022 - 2023</p>
+<p><strong>Duration:</strong> 2022-10 - 2023-05</p>
 <ul>
     <li><strong>Project:</strong> Cargill Japan</li>
     <li>Acted as bridge engineer between global infrastructure teams and Japanese clients.</li>
@@ -188,7 +188,7 @@
 
 <h3>Technical Support Engineer</h3>
 <p>Fujitsu Consulting India Private Limited | Tokyo, Japan(CCW payroll)</p>
-<p><strong>Duration:</strong> 2020 - 2022</p>
+<p><strong>Duration:</strong> 2020-01 - 2022-09</p>
 <ul>
     <li><strong>Project:</strong> Fujitsu FSAS Japan</li>
     <li>Configured and managed Group Policies and provided Tier 1 & 2 support for servers and workstations.</li>
@@ -199,7 +199,7 @@
 
 <h3>Service Desk Agent</h3>
 <p>Fujitsu Consulting India Private Limited | Chennai, India</p>
-<p><strong>Duration:</strong> 2018 - 2020</p>
+<p><strong>Duration:</strong> 2018-03 - 2020-12</p>
 <ul>
     <li>Supported Japanese clients with hardware service requests and provided technical assistance.</li>
     <li>Processed customer requests including registration, cancellation, and modifications.</li>
