--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@
     <li>Delivered on-site support for desktops, laptops, and printers.</li>
     <li>Managed technical inquiries via phone, email, and in-person interactions.</li>
     <li>Translated technical documents and service tickets between Japanese and English.</li>
+    <li>Troubleshot and supported Citrix Virtual Apps and Desktops (formerly XenApp/XenDesktop) environments.</li>
+    <li>Provided end-user and policy-based support for Microsoft Intune-managed devices and application deployments.</li>
+    <li>Handled secure content collaboration issues related to Box, including user access and sync errors.</li>
+    <li>Supported VPN connectivity via Palo Alto’s GlobalProtect, including login failures, certificate issues, and tunnel drops.</li>
 </ul>
 
 <h3>Service Desk Agent</h3>
