--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
   <li><strong>Role:</strong> Acted as the bridge engineer between global infrastructure teams and Japanese clients.</li>
   <li>Provided L2 network troubleshooting, hardware IMAC (Install, Move, Add, Change), and Break-Fix services for desktop, laptops, and printers.</li>
   <li>Managed IT infrastructure including file servers, print servers, and backups.</li>
+   <li>Provided end-user and policy-based support for Microsoft Intune-managed devices and application deployments.</li>	
   <li>Coordinated vendor services, and handled IT procurement and maintenance.</li>
   <li><strong>Automation of Email Draft Creation:</strong> Developed an automated Python script to generate email drafts from data stored in a CSV file.<br> 
     This system was used to generate and send personalized emails efficiently using SCCM-extracted CSV files. The automation saved significant<br> time in 
@@ -338,6 +339,10 @@
         <li>デスクトップ、ノートパソコン、プリンターのオンサイトサポートを提供。</li>
         <li>電話、メール、対面での技術的問い合わせを対応。</li>
         <li>技術文書やサービスチケットを日本語と英語で翻訳。</li>
+	<li>Citrix Virtual Apps and Desktops（旧XenApp/XenDesktop）環境のトラブルシューティングおよびサポートを実施。</li>
+    <li>Microsoft Intuneを用いたデバイス管理、アプリ配信、ポリシー設定に関するユーザーサポートを担当。</li>
+    <li>Boxを使用した安全なファイル共有およびコンテンツ管理に関する問題の対応（同期エラー、アクセス権限等）。</li>
+    <li>Palo AltoのVPNソリューションであるGlobalProtectに関する接続トラブル（ログインエラー、証明書問題、接続切断等）をサポート。</li>
     </ul>
 
     <h3>サービスデスクエージェント</h3>
