--- a/resume.html
+++ b/resume.html
@@ -100,7 +100,7 @@
 
     </script>
     
-        <h2>PROFESSIONAL SUMMARY</h2>
+      <h2>PROFESSIONAL SUMMARY</h2>
         <p>Experienced IT professional with over 6 years of hands-on experience in technical support, specializing in Systems Administration, Networking, Inventory Management, Hardware/Software Maintenance, and Information Security.<br>
         Proven ability to manage end-user computing environments and facilitate seamless communication between global and local IT teams. Fluent in Japanese (N1), English, and Tamil, with a strong commitment to continuous learning and professional development.
         Strong foundational knowledge in Operating System (OS) processes and multithreading, with the ability to understand and optimize system-level resource management. Proficient in Object-Oriented Programming (OOP) and Python, with the ability to quickly adapt to new programming languages and 
@@ -151,12 +151,13 @@
 
 <h3>IT Analyst</h3>
 <p>Wipro Japan | Tokyo, Japan</p>
-
+<p><strong>Duration:</strong> 2024-03 - Present</p>
 <ul>
   <li><strong>Project:</strong> Olympus system engineer</li>
   <li><strong>Role:</strong> Acted as the bridge engineer between global infrastructure teams and Japanese clients.</li>
   <li>Provided L2 network troubleshooting, hardware IMAC (Install, Move, Add, Change), and Break-Fix services for desktop, laptops, and printers.</li>
   <li>Managed IT infrastructure including file servers, print servers, and backups.</li>
+   <li>Provided end-user and policy-based support for Microsoft Intune-managed devices and application deployments.</li>	
   <li>Coordinated vendor services, and handled IT procurement and maintenance.</li>
   <li><strong>Automation of Email Draft Creation:</strong> Developed an automated Python script to generate email drafts from data stored in a CSV file.<br> 
     This system was used to generate and send personalized emails efficiently using SCCM-extracted CSV files. The automation saved significant<br> time in 
@@ -165,6 +166,7 @@
 </ul>
 <h3>Technical Support Engineer (Bridge Engineer)</h3>
 <p>HCL Tech | Chennai, India</p>
+<p><strong>Duration:</strong> 2023-06 - 2024-02</p>
 <ul>
     <li><strong>Project:</strong> BD Medical Projects</li>
     <li>Translated technical documents and communications between Japanese and English for BD's medical project.</li>
@@ -174,6 +176,7 @@
 
 <h3>Field service Engineer</h3>
 <p>TCS Japan | Tokyo, Japan</p>
+<p><strong>Duration:</strong> 2022-10 - 2023-05</p>
 <ul>
     <li><strong>Project:</strong> Cargill Japan</li>
     <li>Acted as bridge engineer between global infrastructure teams and Japanese clients.</li>
@@ -185,17 +188,23 @@
 </ul>
 
 <h3>Technical Support Engineer</h3>
-<p>Fujitsu Consulting India Private Limited | Tokyo, Japan</p>
+<p>Fujitsu Consulting India Private Limited | Tokyo, Japan(CCW payroll)</p>
+<p><strong>Duration:</strong> 2020-01 - 2022-09</p>
 <ul>
     <li><strong>Project:</strong> Fujitsu FSAS Japan</li>
     <li>Configured and managed Group Policies and provided Tier 1 & 2 support for servers and workstations.</li>
     <li>Delivered on-site support for desktops, laptops, and printers.</li>
     <li>Managed technical inquiries via phone, email, and in-person interactions.</li>
     <li>Translated technical documents and service tickets between Japanese and English.</li>
+    <li>Troubleshot and supported Citrix Virtual Apps and Desktops (formerly XenApp/XenDesktop) environments.</li>
+    <li>Provided end-user and policy-based support for Microsoft Intune-managed devices and application deployments.</li>
+    <li>Handled secure content collaboration issues related to Box, including user access and sync errors.</li>
+    <li>Supported VPN connectivity via Palo Alto’s GlobalProtect, including login failures, certificate issues, and tunnel drops.</li>
 </ul>
 
 <h3>Service Desk Agent</h3>
 <p>Fujitsu Consulting India Private Limited | Chennai, India</p>
+<p><strong>Duration:</strong> 2018-03 - 2020-12</p>
 <ul>
     <li>Supported Japanese clients with hardware service requests and provided technical assistance.</li>
     <li>Processed customer requests including registration, cancellation, and modifications.</li>
@@ -330,6 +339,10 @@
         <li>デスクトップ、ノートパソコン、プリンターのオンサイトサポートを提供。</li>
         <li>電話、メール、対面での技術的問い合わせを対応。</li>
         <li>技術文書やサービスチケットを日本語と英語で翻訳。</li>
+	<li>Citrix Virtual Apps and Desktops（旧XenApp/XenDesktop）環境のトラブルシューティングおよびサポートを実施。</li>
+    <li>Microsoft Intuneを用いたデバイス管理、アプリ配信、ポリシー設定に関するユーザーサポートを担当。</li>
+    <li>Boxを使用した安全なファイル共有およびコンテンツ管理に関する問題の対応（同期エラー、アクセス権限等）。</li>
+    <li>Palo AltoのVPNソリューションであるGlobalProtectに関する接続トラブル（ログインエラー、証明書問題、接続切断等）をサポート。</li>
     </ul>
 
     <h3>サービスデスクエージェント</h3>
@@ -363,15 +376,5 @@
         <p>この履歴書は私自身によって作成・デザインされました.</p>
     </footer>
 </div>
-
-
-
-
-
-
-
-
-
-
-    </body>
+ </body>
 </html>
